--- a/ecomm_app/templates/ecomm/home.html
+++ b/ecomm_app/templates/ecomm/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="outer_container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 col-sm-12">
           <!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -23,7 +23,7 @@
       </div>
     </div> -->
 
-    <div class="slider">
+    <div class="slider col-sm-12 mr-5 pr-5">
       <div class="slide">
         <div class="content">
           <h2>We trade</h2>
@@ -74,7 +74,7 @@
             <div class="col-md-12">
               <div class="container w3-center mt-5">
                 <div class="row">
-                  <div class="col-md-12 home-column">
+                  <div class="col-md-sm-12 home-column">
                     <div class="row products d-flex">
                     {% if object_list %}
                       {% for item in object_list %}
