--- a/ecomm_app/templates/ecomm/base.html
+++ b/ecomm_app/templates/ecomm/base.html
@@ -18,18 +18,19 @@
     <nav class="w3-bar">
       <a href="{% url 'ecomm_app:home' %}" class="navbar-brand w3-bar-item ">Shoppy</a>
       <div class="w3-right">
+        {% if user.is_authenticated %}
           <a href="{% url 'ecomm_app:order-summary' %}" class="w3-bar-item">
             <span class="badge-primary z-depth-1 pl-1 mr-1"> {{ request.user| cart_item_count }} </span>
             <i class="fa fa-shopping-cart"></i>
             <span class="clearfix ">Cart</span>
           </a>
+          {% endif %}
           {% if user.is_authenticated %}
           <a href="{% url 'profile' %}" class="w3-bar-item w3-hide-small"><i class="fa fa-user mr-3"></i> Profile</a>
           <a href="{% url 'logout' %}" class="w3-bar-item w3-hide-small"><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
           {% else %}
-          <a href="{% url 'login' %}" class="w3-bar-item">Login</a>
-          <h5>|</h5>
-          <a href="{% url 'register' %}" class="w3-bar-item">Sign up</a>
+          <a href="{% url 'login' %}" class="w3-bar-item w3-hide-small">Login</a>
+          <a href="{% url 'register' %}" class="w3-bar-item w3-hide-small">Sign up</a>
           {% endif %}
           <a href="javascript:void(0)" class="w3-bar-item w3-hide-large w3-hide-medium" onclick="myFunction()">&#9776;</a>
       </div>
@@ -39,7 +40,6 @@
         <a href="{% url 'logout' %}" class="w3-bar-item "><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
         {% else %}
         <a href="{% url 'login' %}" class="w3-bar-item ">Login</a>
-        <h5>|</h5>
         <a href="{% url 'register' %}" class="w3-bar-item ">Sign up</a>
         {% endif %}
       </div>
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
             <p><u><a href="#">Ecommerce Site</a></u> Is a Site owned by ecommerce Company Limited</p>
-            <p class="h6">&copy All right Reversed.<a class="text-green ml-2" href="#" target="_blank">E-Commerce</a></p>
+            <p class="h6">&copy All Rights Reserved.<a class="text-green ml-2" href="#" target="_blank">E-Commerce</a></p>
           </div>
           </hr>
         </div>
