--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,23 +1,23 @@
 {% extends 'ecomm/base.html' %}
-<!-- {% load crispy_forms_tags %} -->
+{% load crispy_forms_tags %}
 {% block title %} login {% endblock %}
 {% block content %}
-<div class="user_container">
+<div class="login_container col-12">
   <div class="row">
-    <div class="col-md-8 offset-2 user-column mb-5 pb-5">
+    <div class="col-md-8 offset-md-2 col-12 user-column pb-5">
       <div class="content mb-5">
-        <div class="login_form w3-card pb-5 ">
-            <form method="POST" class="form-group pl-5 pr-5 mt-5 pt-5 ">
+        <div class="login_form w3-card pb-3 pr-5 pl-5 mr-2">
+            <form method="POST" class="form-group pt-5 ">
               {% csrf_token %}
               <h3> Log In</h3>
                 {{ form| crispy }}
-                <div class="form-group pl-5 pr-5">
+                <div class="form-group mt-5">
                   <button class="btn btn-primary btn-block" type="submit">Login</button>
-                  <a class="link marginl" href="#"> forgot password?</a>
+                  <a href="#"> forgot password?</a>
                 </div>
             </form>
             <div>
-              <div class="text-muted pl-5"> Dont have an account?
+              <div class="text-muted"> <span> Dont have an account? </span>
                   <a class="link" href="{% url 'register'%}">Sign Up Now</a>
               </div>
             </div>
