--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,18 +2,18 @@
 {% load crispy_forms_tags %}
 {% block title %} Signup {% endblock %}
 {% block content %}
-    <div class="register-form w3-card">
-        <form method="POST">
+    <div class="register_form w3-card col-12 col-md-8 offset-md-2 mt-5 mb-5 pb-3 ">
+        <form method="POST" class="pl-5 pr-5">
             {% csrf_token %}
-                <h3 class=" mb-4">Join Us Today</h3>
+                <h3 class=" mb-5 pt-5">Join Us Today</h3>
                 {{ form| crispy }}
             <div class="form-group">
                 <button class="btn btn-info btn-block" type="submit">Sign Up</button>
             </div>
         </form>
-        <div class=" ">
+        <div class="ml-5">
             <small class="text-muted">Already Have an Account?
-                <a class="link" href="{% url 'login' %}">Sign In</a>
+                <a href="{% url 'login' %}">Sign In</a>
             </small>
         </div>
     </div>
